{
    "name": "CursorInput",
    "maps": [
        {
            "name": "GamepadStick",
            "id": "368f49ea-51a3-4f78-9399-d812c3d7001e",
            "actions": [
                {
                    "name": "LeftControllerStick",
                    "type": "Value",
                    "id": "19c35e28-f19f-4bfc-89ae-f25c1fb542f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4bf1cd5e-524e-46fa-a6a9-25fadecbcafb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1c21d1ab-9304-4f4d-a090-a807bc5e64a1",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7baf5501-dd4e-4ca6-81b3-a64e2689f59a",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "75acb1ef-77ed-4d07-9b2b-ff5e4a10f315",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f4a5831d-4396-4fb5-9ab0-e659fef69a41",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}